--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -95,7 +95,7 @@ webpage and how they got there.*/
     display:block;
 }
 
-.index_image1 {
+/*.index_image1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -109,6 +109,13 @@ webpage and how they got there.*/
     margin-right: auto;
     width: 100%;
     margin-bottom: 50px;
+}*/
+
+.fade {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
 }
 
 .footer_container {
@@ -395,4 +402,55 @@ a desktop version.*/
         margin-left: 290px;
         margin-right: 290px;
     }
+}
+
+.fade {
+  position:relative;
+  
+  right:0;
+  left:0;
+  bottom:0;
+  height:250px;
+  width:100%;
+  
+}
+
+
+.fade img {
+    position:absolute;
+    width:100%;
+  height:250px;
+  left:0;
+    -webkit-animation-name: fade;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-duration: 6s;
+    animation-name: fade;
+    animation-iteration-count: infinite;
+    animation-duration: 6s;
+}
+
+@-webkit-keyframes fade {
+    0% {opacity: 0;}
+    20% {opacity: 1;}
+    33% {opacity: 1;}
+    53% {opacity: 0;}
+    100% {opacity: 0;}
+}
+@keyframes fade {
+    0% {opacity: 0;}
+    20% {opacity: 1;}
+    33% {opacity: 1;}
+    53% {opacity: 0;}
+    100% {opacity: 0;}
+}
+
+#fade1 {
+    
+}
+#fade2 {
+    -webkit-animation-delay: -6s;   
+}
+
+#fade3 {
+    -webkit-animation-delay: -4s; 
 }
